--- a/roles/worker/tasks/pre_requisites.yml
+++ b/roles/worker/tasks/pre_requisites.yml
@@ -27,6 +27,9 @@
     reload: yes
   ignore_errors: true
   loop:
+  - {name: vm.overcommit_memory, value: 1}
+  - {name: kernel.panic_on_oops, value: 1}
+  - {name: kernel.panic, value: 10}
   - {name: net.ipv4.ip_forward, value: 1}
   - {name: net.bridge.bridge-nf-call-ip6tables, value: 1}
   - {name: net.bridge.bridge-nf-call-iptables, value: 1}
@@ -40,7 +43,6 @@
   - {name: net.ipv4.tcp_slow_start_after_idle, value: 0}
   - {name: net.ipv4.tcp_low_latency, value: 1}
   - {name: net.core.somaxconn, value: 40960}
-  - {name: net.netfilter.nf_conntrack_tcp_be_liberal, value: 1}
   loop_control:
     label: "{{ item.name }}"
 - name: Disable swap (1/2)
