--- a/sample_inventory/inventory.ini
+++ b/sample_inventory/inventory.ini
@@ -1,17 +1,15 @@
 [etcd]
-10.90.84.112
-10.90.84.113
-10.90.84.114 
+168.119.61.134   internal_ip=10.1.0.2
 
-[control-plane]
-10.90.84.112
+[control_plane]
+168.119.61.134   internal_ip=10.1.0.2
 
 [worker]
-10.90.84.115
-10.90.84.116
-10.90.84.117
+168.119.61.134   internal_ip=10.1.0.2
+49.13.123.209    internal_ip=10.1.0.3
+49.13.219.28     internal_ip=10.1.0.4
 
 [all:vars]
 ansible_ssh_user=root
-ansible_ssh_pass=****
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_ssh_private_key_file="~/.ssh/id_rsa"
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ControlMaster=auto -o ControlPersist=120s'
