--- a/roles/worker/tasks/cleanup.yml
+++ b/roles/worker/tasks/cleanup.yml
@@ -6,9 +6,9 @@
     path: "{{item}}"
     state: absent
   loop:
-  # - "/tmp/kubernetes-node-v{{ kubernetes_version }}-{{ansible_system | lower}}-{{ arch }}.tar.gz"
-  # - "/tmp/kubernetes"
-  # - /tmp/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz
+  - "/tmp/kubernetes-node-{{ansible_system | lower}}-{{ arch }}.tar.gz"
+  - /tmp/kubernetes
+  - /tmp/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz
   - /tmp/kube-proxy.csr
   - /tmp/ca.key
   - "/tmp/{{ ansible_hostname }}.csr"
