--- a/roles/worker/tasks/cri.yml
+++ b/roles/worker/tasks/cri.yml
@@ -15,7 +15,7 @@
     regexp: 'disabled_plugins'
     state: absent
 - name: remove apparmor profile for runc (if present)
-  shell: ln -s /etc/apparmor.d/runc /etc/apparmor.d/disable/ && apparmor_parser -R /etc/apparmor.d/runc
+  shell: mkdir -p /etc/apparmor.d/disable && ln -s /etc/apparmor.d/runc /etc/apparmor.d/disable/ && apparmor_parser -R /etc/apparmor.d/runc
   failed_when: false
   when: ansible_os_family == 'Debian'
 - name: Restart containerd
